[gd_scene load_steps=12 format=2]

[ext_resource path="res://Effects/PottedPlantEffect.gd" type="Script" id=1]
[ext_resource path="res://Effects/potted_plant_effect.png" type="Texture" id=2]
[ext_resource path="res://Music and Sounds/Glass Shatter Light 03.wav" type="AudioStream" id=3]
[ext_resource path="res://Music and Sounds/SFX Glass Break 7.wav" type="AudioStream" id=4]
[ext_resource path="res://Music and Sounds/SFX Glass Break 4.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Animate",
"speed": 15.0
} ]

[node name="PottedPlantEffect" type="AnimatedSprite"]
position = Vector2( 16, 16 )
frames = SubResource( 6 )
animation = "Animate"
frame = 3
script = ExtResource( 1 )

[node name="Sound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 0.65
autoplay = true

[node name="Sound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="Sound3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -7.0
